--- a/test-output/index.html
+++ b/test-output/index.html
@@ -101,22 +101,22 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="learningTestNG.Vult_TestCases" hash-for-method="createUser(Gtest1, Gtest2, Consultant, g.test1@gmail.com, gtest1@gmail.com, Hyd, Arizona [AZ], Tel, 524366, 01/...)">createUser(Gtest1, Gtest2, Consultant, g.test1@gmail.com, gtest1@gmail.com, Hyd, Arizona [AZ], Tel, 524366, 01/...)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="learningTestNG.Project_Vultus" hash-for-method="createProject(test2, SampleTest, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)">createProject(test2, SampleTest, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="learningTestNG.Vult_TestCases" hash-for-method="createUser(Gtest1, Gtest2, Consultant, gtest.1@gmail.com, gtest.1@gmail.com, Hyd, Arizona [AZ], Tel, 524366, 01...)">createUser(Gtest1, Gtest2, Consultant, gtest.1@gmail.com, gtest.1@gmail.com, Hyd, Arizona [AZ], Tel, 524366, 01...)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="learningTestNG.Project_Vultus" hash-for-method="createProject(test, Test1, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)">createProject(test, Test1, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="learningTestNG.Vult_TestCases" hash-for-method="login">login</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="learningTestNG.Project_Vultus" hash-for-method="login">login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="learningTestNG.Vult_TestCases" hash-for-method="navigateTOUserTab">navigateTOUserTab</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="learningTestNG.Project_Vultus" hash-for-method="navigateTOProjectTab(Projects)">navigateTOProjectTab(Projects)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -134,23 +134,23 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">learningTestNG.Vult_TestCases</span>
+              <span class="class-name">learningTestNG.Project_Vultus</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createUser(Gtest1, Gtest2, Consultant, g.test1@gmail.com, gtest1@gmail.com, Hyd, Arizona [AZ], Tel, 524366, 01/...)">
-                  </a> <!-- createUser(Gtest1, Gtest2, Consultant, g.test1@gmail.com, gtest1@gmail.com, Hyd, Arizona [AZ], Tel, 524366, 01/...) -->
-                  <span class="method-name">createUser</span>
-                  <span class="parameters">(Gtest1, Gtest2, Consultant, g.test1@gmail.com, gtest1@gmail.com, Hyd, Arizona [AZ], Tel, 524366, 01/21/2018)</span>
+                  <a name="createProject(test2, SampleTest, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)">
+                  </a> <!-- createProject(test2, SampleTest, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018) -->
+                  <span class="method-name">createProject</span>
+                  <span class="parameters">(test2, SampleTest, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="createUser(Gtest1, Gtest2, Consultant, gtest.1@gmail.com, gtest.1@gmail.com, Hyd, Arizona [AZ], Tel, 524366, 01...)">
-                  </a> <!-- createUser(Gtest1, Gtest2, Consultant, gtest.1@gmail.com, gtest.1@gmail.com, Hyd, Arizona [AZ], Tel, 524366, 01...) -->
-                  <span class="method-name">createUser</span>
-                  <span class="parameters">(Gtest1, Gtest2, Consultant, gtest.1@gmail.com, gtest.1@gmail.com, Hyd, Arizona [AZ], Tel, 524366, 01/21/2018)</span>
+                  <a name="createProject(test, Test1, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)">
+                  </a> <!-- createProject(test, Test1, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018) -->
+                  <span class="method-name">createProject</span>
+                  <span class="parameters">(test, Test1, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -162,9 +162,10 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="navigateTOUserTab">
-                  </a> <!-- navigateTOUserTab -->
-                  <span class="method-name">navigateTOUserTab</span>
+                  <a name="navigateTOProjectTab(Projects)">
+                  </a> <!-- navigateTOProjectTab(Projects) -->
+                  <span class="method-name">navigateTOProjectTab</span>
+                  <span class="parameters">(Projects)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -180,8 +181,9 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot;&gt;
   &lt;test name=&quot;Test&quot;&gt;
+    &lt;parameter name=&quot;tabName&quot; value=&quot;Projects&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;learningTestNG.Vult_TestCases&quot;/&gt;
+      &lt;class name=&quot;learningTestNG.Project_Vultus&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -223,26 +225,26 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createUser')
-data.setCell(0, 2, 'learningTestNG.Vult_TestCases')
-data.setCell(0, 3, 32801);
+data.setCell(0, 1, 'login')
+data.setCell(0, 2, 'learningTestNG.Project_Vultus')
+data.setCell(0, 3, 16330);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'login')
-data.setCell(1, 2, 'learningTestNG.Vult_TestCases')
-data.setCell(1, 3, 25482);
+data.setCell(1, 1, 'navigateTOProjectTab')
+data.setCell(1, 2, 'learningTestNG.Project_Vultus')
+data.setCell(1, 3, 8886);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'createUser')
-data.setCell(2, 2, 'learningTestNG.Vult_TestCases')
-data.setCell(2, 3, 8188);
+data.setCell(2, 1, 'createProject')
+data.setCell(2, 2, 'learningTestNG.Project_Vultus')
+data.setCell(2, 3, 2518);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'navigateTOUserTab')
-data.setCell(3, 2, 'learningTestNG.Vult_TestCases')
-data.setCell(3, 3, 6755);
+data.setCell(3, 1, 'createProject')
+data.setCell(3, 2, 'learningTestNG.Project_Vultus')
+data.setCell(3, 3, 21);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 27 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -268,26 +270,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">learningTestNG.Vult_TestCases</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">learningTestNG.Project_Vultus</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">initalizeDriver</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">13616 ms</span>
+                <span class="method-start">9392 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">navigateTOUserTab</span>
-                <span class="method-start">39099 ms</span>
+                <span class="method-name">navigateTOProjectTab(Projects)</span>
+                <span class="method-start">25726 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">createUser(Gtest1, Gtest2, Consultant, gtest.1@gmail.com, gtest.1@gmail.com, Hyd, Arizona [AZ], Tel, 524366, 01...)</span>
-                <span class="method-start">46929 ms</span>
+                <span class="method-name">createProject(test2, SampleTest, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)</span>
+                <span class="method-start">35743 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">createUser(Gtest1, Gtest2, Consultant, g.test1@gmail.com, gtest1@gmail.com, Hyd, Arizona [AZ], Tel, 524366, 01/...)</span>
-                <span class="method-start">79731 ms</span>
+                <span class="method-name">createProject(test, Test1, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)</span>
+                <span class="method-start">38266 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
