--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6dfcb">  <td>18/06/15 20:18:22</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Vult_TestCases.initalizeDriver()[pri:0, instance:learningTestNG.Vult_TestCases@523884b2]">&gt;&gt;initalizeDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1072601481</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>18/06/15 20:18:32</td>   <td>9615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Vult_TestCases.login()[pri:0, instance:learningTestNG.Vult_TestCases@523884b2]">login</td> 
-  <td>main@1072601481</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>18/06/15 20:18:46</td>   <td>24266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Vult_TestCases.navigateTOUserTab()[pri:0, instance:learningTestNG.Vult_TestCases@523884b2]">navigateTOUserTab</td> 
-  <td>main@1072601481</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>18/06/15 20:18:55</td>   <td>32878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Vult_TestCases.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:learningTestNG.Vult_TestCases@523884b2]">createUser</td> 
-  <td>main@1072601481</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/06/21 07:57:58</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGAnnotations_1.beforeTest()[pri:0, instance:learningTestNG.TestNGAnnotations_1@14acaea5]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1121647253</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/06/21 07:57:58</td>   <td>56</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGAnnotations_1.beforeClass()[pri:0, instance:learningTestNG.TestNGAnnotations_1@14acaea5]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1121647253</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/06/21 07:57:58</td>   <td>95</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGAnnotations_1.beforeMethod()[pri:0, instance:learningTestNG.TestNGAnnotations_1@14acaea5]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1121647253</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/06/21 07:57:58</td>   <td>95</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGAnnotations_1.test1()[pri:0, instance:learningTestNG.TestNGAnnotations_1@14acaea5]">test1</td> 
+  <td>main@1121647253</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/06/21 07:57:58</td>   <td>119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGAnnotations_1.afterMethod()[pri:0, instance:learningTestNG.TestNGAnnotations_1@14acaea5]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1121647253</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/06/21 07:57:58</td>   <td>122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGAnnotations_1.beforeMethod()[pri:0, instance:learningTestNG.TestNGAnnotations_1@14acaea5]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1121647253</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/06/21 07:57:58</td>   <td>122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGAnnotations_1.test2()[pri:0, instance:learningTestNG.TestNGAnnotations_1@14acaea5]">test2</td> 
+  <td>main@1121647253</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/06/21 07:57:58</td>   <td>145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGAnnotations_1.afterMethod()[pri:0, instance:learningTestNG.TestNGAnnotations_1@14acaea5]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1121647253</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/06/21 07:57:58</td>   <td>145</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGAnnotations_1.afterClass()[pri:0, instance:learningTestNG.TestNGAnnotations_1@14acaea5]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1121647253</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/06/21 07:57:58</td>   <td>148</td> <td>&nbsp;</td><td title="&lt;&lt;TestNGAnnotations_1.afterTest()[pri:0, instance:learningTestNG.TestNGAnnotations_1@14acaea5]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1121647253</td>   <td></td> </tr>
 </table>
