--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6dfcb">  <td>18/06/16 23:39:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Vult_TestCases.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:learningTestNG.Vult_TestCases@523884b2]">createUser</td> 
-  <td>main@1072601481</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>18/06/16 23:40:03</td>   <td>32802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Vult_TestCases.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:learningTestNG.Vult_TestCases@523884b2]">createUser</td> 
-  <td>main@1072601481</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>18/06/16 23:38:44</td>   <td>-46920</td> <td>&nbsp;</td><td title="&gt;&gt;Vult_TestCases.initalizeDriver()[pri:0, instance:learningTestNG.Vult_TestCases@523884b2]">&gt;&gt;initalizeDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1072601481</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>18/06/16 23:38:57</td>   <td>-33313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Vult_TestCases.login()[pri:0, instance:learningTestNG.Vult_TestCases@523884b2]">login</td> 
-  <td>main@1072601481</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>18/06/16 23:39:23</td>   <td>-7830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Vult_TestCases.navigateTOUserTab()[pri:0, instance:learningTestNG.Vult_TestCases@523884b2]">navigateTOUserTab</td> 
-  <td>main@1072601481</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/06/26 08:43:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Project_Vultus.createProject(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:learningTestNG.Project_Vultus@3ffc5af1]">createProject</td> 
+  <td>main@1459672753</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/06/26 08:43:08</td>   <td>2523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Project_Vultus.createProject(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:learningTestNG.Project_Vultus@3ffc5af1]">createProject</td> 
+  <td>main@1459672753</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/06/26 08:42:30</td>   <td>-35741</td> <td>&nbsp;</td><td title="&gt;&gt;Project_Vultus.initalizeDriver()[pri:0, instance:learningTestNG.Project_Vultus@3ffc5af1]">&gt;&gt;initalizeDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1459672753</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/06/26 08:42:39</td>   <td>-26351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Project_Vultus.login()[pri:0, instance:learningTestNG.Project_Vultus@3ffc5af1]">login</td> 
+  <td>main@1459672753</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/06/26 08:42:55</td>   <td>-10017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Project_Vultus.navigateTOProjectTab(java.lang.String)[pri:0, instance:learningTestNG.Project_Vultus@3ffc5af1]">navigateTOProjectTab</td> 
+  <td>main@1459672753</td>   <td></td> </tr>
 </table>
