--- a/test-output/index.html
+++ b/test-output/index.html
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,12 +101,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="learningTestNG.Project_Vultus" hash-for-method="createProject(test2, SampleTest, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)">createProject(test2, SampleTest, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="learningTestNG.Project_Vultus" hash-for-method="createProject(test, Test1, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)">createProject(test, Test1, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="learningTestNG.Project_Vultus" hash-for-method="createProject(test6, SampleTest, Sample, alaska, Hyd, project3, 06/26/2018, 06/29/2018)">createProject(test6, SampleTest, Sample, alaska, Hyd, project3, 06/26/2018, 06/29/2018)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -139,18 +134,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createProject(test2, SampleTest, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)">
-                  </a> <!-- createProject(test2, SampleTest, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018) -->
+                  <a name="createProject(test6, SampleTest, Sample, alaska, Hyd, project3, 06/26/2018, 06/29/2018)">
+                  </a> <!-- createProject(test6, SampleTest, Sample, alaska, Hyd, project3, 06/26/2018, 06/29/2018) -->
                   <span class="method-name">createProject</span>
-                  <span class="parameters">(test2, SampleTest, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="createProject(test, Test1, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)">
-                  </a> <!-- createProject(test, Test1, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018) -->
-                  <span class="method-name">createProject</span>
-                  <span class="parameters">(test, Test1, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)</span>
+                  <span class="parameters">(test6, SampleTest, Sample, alaska, Hyd, project3, 06/26/2018, 06/29/2018)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -223,28 +210,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'login')
+data.setCell(0, 1, 'createProject')
 data.setCell(0, 2, 'learningTestNG.Project_Vultus')
-data.setCell(0, 3, 16330);
+data.setCell(0, 3, 55303);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'navigateTOProjectTab')
+data.setCell(1, 1, 'login')
 data.setCell(1, 2, 'learningTestNG.Project_Vultus')
-data.setCell(1, 3, 8886);
+data.setCell(1, 3, 15738);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'createProject')
+data.setCell(2, 1, 'navigateTOProjectTab')
 data.setCell(2, 2, 'learningTestNG.Project_Vultus')
-data.setCell(2, 3, 2518);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'createProject')
-data.setCell(3, 2, 'learningTestNG.Project_Vultus')
-data.setCell(3, 3, 21);
+data.setCell(2, 3, 9926);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 27 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -277,19 +260,15 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">9392 ms</span>
+                <span class="method-start">10800 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">navigateTOProjectTab(Projects)</span>
-                <span class="method-start">25726 ms</span>
+                <span class="method-start">26541 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">createProject(test2, SampleTest, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)</span>
-                <span class="method-start">35743 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">createProject(test, Test1, Sample, alaska, Hyd, project2, 06/26/2018, 06/29/2018)</span>
-                <span class="method-start">38266 ms</span>
+                <span class="method-name">createProject(test6, SampleTest, Sample, alaska, Hyd, project3, 06/26/2018, 06/29/2018)</span>
+                <span class="method-start">37719 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
