--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,49 +31,35 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">4</td><td class="numi">4</td><td class="numi">0</td><td class="numi">0</td><td class="numi">38.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">93.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="4">learningTestNG.Project_Vultus</td><td><a href="#m1"><b>login</b>  </a></td><td class="numi">1</td><td>1529982759628</td><td class="numi">16330</td></tr><tr class="passedodd"><td><a href="#m2"><b>navigateTOProjectTab</b>  </a></td><td class="numi">1</td><td>1529982775962</td><td class="numi">8886</td></tr><tr class="passedodd"><td><a href="#m3"><b>createProject</b>  </a></td><td class="numi">2</td><td>1529982785979</td><td class="numi">2544</td></tr><tr class="passedodd"><td><a href="#m4"><b>createProject</b>  </a></td><td class="numi">2</td><td>1529982785979</td><td class="numi">2544</td></tr>
+<tr class="passedodd"><td rowspan="3">learningTestNG.Project_Vultus</td><td><a href="#m1"><b>login</b>  </a></td><td class="numi">1</td><td>1530156656744</td><td class="numi">15738</td></tr><tr class="passedodd"><td><a href="#m2"><b>navigateTOProjectTab</b>  </a></td><td class="numi">1</td><td>1530156672485</td><td class="numi">9926</td></tr><tr class="passedodd"><td><a href="#m3"><b>createProject</b>  </a></td><td class="numi">1</td><td>1530156683663</td><td class="numi">55303</td></tr>
 </table>
 <h1>Test</h1>
 <h2 id="m1">learningTestNG.Project_Vultus:createProject</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th></tr>
-<tr class="param stripe"><td>test2</td>
+<tr class="param stripe"><td>test6</td>
 <td>SampleTest</td>
 <td>Sample</td>
 <td>alaska</td>
 <td>Hyd</td>
-<td>project2</td>
+<td>project3</td>
 <td>06/26/2018</td>
 <td>06/29/2018</td>
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">learningTestNG.Project_Vultus:createProject</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th></tr>
-<tr class="param stripe"><td>test</td>
-<td>Test1</td>
-<td>Sample</td>
-<td>alaska</td>
-<td>Hyd</td>
-<td>project2</td>
-<td>06/26/2018</td>
-<td>06/29/2018</td>
-</tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">learningTestNG.Project_Vultus:login</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">learningTestNG.Project_Vultus:navigateTOProjectTab</h2>
+<h2 id="m2">learningTestNG.Project_Vultus:navigateTOProjectTab</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th></tr>
 <tr class="param stripe"><td>Projects</td>
 </tr>
 </table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m3">learningTestNG.Project_Vultus:login</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
